--- a/views/index.ejs
+++ b/views/index.ejs
@@ -20,6 +20,7 @@
         <a href="/login" class="btn btn-default"><span class="fa fa-user"></span> Local Login</a>
         <a href="/signup" class="btn btn-default"><span class="fa fa-user"></span> Local Signup</a>
         <a href="/auth/google" class="btn btn-danger"><span class="fa fa-google-plus"></span> Google</a>
+        <a href="/auth/github" class="btn btn-danger"><span class="fa fa-github"></span> Github</a>
     </div>
 
 </div>
