Add twitter auth and account linking

--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -22,7 +22,7 @@
       <div class="col-sm-6">
         <div class="well">
           <h3><span class="fa fa-user"></span> Local</h3>
-          
+
           <% if (user.local.email) { %>
             <p>
               <strong>id</strong>: <%= user._id %><br>
@@ -37,6 +37,7 @@
 
         </div>
       </div>
+
       <!-- GOOGLE INFORMATION -->
       <div class="col-sm-6">
         <div class="well">
@@ -55,6 +56,28 @@
           <% } else { %>
             <a href="/connect/google" class="btn btn-danger">Connect Google</a>
           <% } %>
+        </div>
+      </div>
+
+      <!-- TWITTER INFORMATION -->
+      <div class="col-sm-6">
+        <div class="well">
+          <h3 class="text-info"><span class="fa fa-twitter"></span> Twitter</h3>
+
+          <!-- check if the user has this token (is the user authenticated with this social account) -->
+          <% if (user.twitter.token) { %>
+            <p>
+              <strong>id</strong>: <%= user.twitter.id %><br>
+              <strong>token</strong>: <%= user.twitter.token %><br>
+              <strong>display name</strong>: <%= user.twitter.displayName %><br>
+              <strong>username</strong>: <%= user.twitter.username %>
+            </p>
+
+            <a href="/unlink/twitter" class="btn btn-info">Unlink</a>
+            <% } else { %>
+              <a href="/connect/twitter" class="btn btn-info">Connect Twitter</a>
+            <% } %>
+              
         </div>
       </div>
 
