--- a/views/index.ejs
+++ b/views/index.ejs
@@ -21,7 +21,7 @@
         <a href="/signup" class="btn btn-default"><span class="fa fa-user"></span> Local Signup</a>
         <a href="/auth/google" class="btn btn-danger"><span class="fa fa-google-plus"></span> Google</a>
         <a href="/auth/twitter" class="btn btn-info"><span class="fa fa-twitter"></span> Twitter</a>
-        <a href="/auth/github" class="btn btn-danger"><span class="fa fa-github"></span> Github</a>
+        <a href="/auth/github" class="btn btn-success"><span class="fa fa-github"></span> Github</a>
     </div>
 
 </div>
